<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="32dp">

                <Button
                    android:id="@+id/action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/teal_200"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="8dp"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_black"
                    android:textColor="#333"
                    android:textSize="24sp"
                    tools:text="An amazing name" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:adjustViewBounds="true"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="#333"
                    android:textSize="36sp"
                    tools:text="$12.99" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/moves"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="#666"
                    android:textSize="16sp"
                    tools:text="Some amazing description with contains product" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/abilities"
                    android:textColor="@color/purple_700"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/secondaryDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="#666"
                    android:textSize="16sp"
                    tools:text="Some amazing description with contains product" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>