<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    android:background="@color/white"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_recycler_view"
                tools:listitem="@layout/view_holder_checkout_item"
                tools:itemCount="4"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:background="#fafafa"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/checkout_time"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:background="#fafafa"
                android:gravity="bottom"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/checkout_description"
                android:textColor="@color/black" />

            <View
                android:id="@+id/breakdown_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toTopOf="@+id/breakdown_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <androidx.recyclerview.widget.RecyclerView
                tools:listitem="@layout/view_holder_price_item"
                tools:itemCount="3"
                android:background="@color/white"
                android:id="@+id/breakdown_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:layout_marginTop="32dp"
                android:id="@+id/version"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="14sp"
                tools:text="Version name"
                app:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="16dp"
                android:id="@+id/credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="14sp"
                app:autoSizeTextType="uniform"
                tools:text="Made with ❤️ by Bedoy" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        android:padding="8dp"
        android:fontFamily="@font/roboto_medium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>